--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
 </header>
 <div>
     <section>
-<h1>Єффективные решения <br /> для вашего бизнеса</h1>
-<button type="">Заказать услугу</button>
+            <h1>Єффективные решения <br /> для вашего бизнеса</h1>
+        <button type="">Заказать услугу</button>
     </section>
 </div>
-
 <!-- Основной материал -->
 <main>
     <section>
@@ -51,53 +50,51 @@
             </li>
         </ul>
     </section>
-
 </main>
-
+<!-- Секция чем мы занимаемся -->
 <section>
-<h2>Чем мы занимаемся</h2>
-
-<ul>
-    <li> <img src="/css/images/keyboard.jpg" alt="keyboard" width="370"> </li>
-    <li> <img src="/css/images/phone.jpg" alt="phone" width="370"> </li>
-    <li> <img src="/css/images/screen.jpg" alt="screen" width="370"> </li>
-</ul>
-
-
-</section>
-
-
-
-
-
-
-
-<section>
-<h2>Наша команда</h2>
+        <h2>Чем мы занимаемся</h2>
     <ul>
-        <li>
-            <img src="/css/images/product.jpg" alt="Игорь Демяненко" width="270"> 
-            <h3>Игорь Демяненко</h3>
-            <p>Product Designer</p>
-        </li>
-        <li>
-            <img src="/css/images/developer.jpg" alt="Ольга Репина" width="270">
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
-        </li>
-        <li>
-            <img src="/css/images/marketing.jpg" alt="Николай Тарасов" width="270">
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
-        </li>
-        <li>
-            <img src="/css/images/designer.jpg" alt="Михаил Ермаков" width="270">
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
-        </li>
+        <li> <img src="/css/images/keyboard.jpg" alt="keyboard" width="370"> </li>
+        <li> <img src="/css/images/phone.jpg" alt="phone" width="370"> </li>
+        <li> <img src="/css/images/screen.jpg" alt="screen" width="370"> </li>
     </ul>
-
+</section>
+<!-- Секция наша команда -->
+<section>
+    <h2>Наша команда</h2>
+        <ul>
+            <li>
+                <img src="/css/images/product.jpg" alt="Игорь Демяненко" width="270"> 
+                <h3>Игорь Демяненко</h3>
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="/css/images/developer.jpg" alt="Ольга Репина" width="270">
+                <h3>Ольга Репина</h3>
+                <p>Frontend Developer</p>
+            </li>
+            <li>
+                <img src="/css/images/marketing.jpg" alt="Николай Тарасов" width="270">
+                <h3>Николай Тарасов</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="/css/images/designer.jpg" alt="Михаил Ермаков" width="270">
+                <h3>Михаил Ермаков</h3>
+                <p>UI Designer</p>
+            </li>
+        </ul>
 </section>  
+<!-- footer -->
+<footer>
+    <ul>   
+        <li><a href="/"> Web studio </a></li>
+        <li> <a href="">г.Киев, пр-т Леси Украинки,26</a></li>
+        <li><a href="tel:+38 099 111 11 11">+38 099 111 11 11</a></li>
+        <li><a href="mailto:info@example.com " title="info@example.com"> info@example.com </a></li>
+    </ul>        
+</footer>
 
 
 
