--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -89,11 +89,13 @@
 <!-- footer -->
 <footer>
     <a href="/"> Web studio </a>
-    <ul>   
-        <li><address>г.Киев, пр-т Леси Украинки,26</address></li>
-        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-        <li><a href="mailto:info@example.com" title="info@example.com"> info@example.com </a></li>
-    </ul>        
+    <address>
+        <ul>
+            <li><a href="/"> г.Киев, пр-т Леси Украинки,26 </a></li>
+            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <li><a href="mailto:info@example.com" title="info@example.com"> info@example.com </a></li>
+        </ul>
+    </address>
 </footer>
 
 </body>
