--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
         <li>
             <img src="./css/images/product.jpg" alt="Игорь Демяненко" width="270">
             <h3>Игорь Демяненко</h3>
-            <p>Product Designer</p>
+            <p lang="en" >Product Designer</p>
         </li>
         <li>
             <img src="./css/images/developer.jpg" alt="Ольга Репина" width="270">
             <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p lang="en" >Frontend Developer</p>
         </li>
         <li>
             <img src="./css/images/marketing.jpg" alt="Николай Тарасов" width="270">
             <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en" >Marketing</p>
         </li>
         <li>
             <img src="./css/images/designer.jpg" alt="Михаил Ермаков" width="270">
             <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p lang="en" >UI Designer</p>
         </li>
     </ul>
 </section>
@@ -97,6 +97,8 @@
         </ul>
     </address>
 </footer>
+
+
 
 </body>
 </html>
